--- a/portfolio.html
+++ b/portfolio.html
@@ -1,61 +1,65 @@
 
-<!doctype html><html lang="ja"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Safolio — ポートフォリオ</title><meta name="robots" content="index,follow,noai,noimageai"><link rel="stylesheet" href="styles.css"></head>
-<body oncontextmenu="return false;"><header class="header"><div class="container inner">
+<!doctype html><html lang="ja"><head>
+<meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Safolio — ポートフォリオ（JSON管理）</title>
+<meta name="robots" content="index,follow,noai,noimageai">
+<link rel="stylesheet" href="styles.css">
+</head><body oncontextmenu="return false;">
+<header class="header"><div class="container inner">
   <div class="brand"><div class="logo"></div><strong>Safolio</strong><span class="small">Portfolio</span></div>
-  <nav class="nav"><a href="index.html">ホーム</a><a href="portfolio.html">ポートフォリオ</a><a href="faq.html">FAQ</a><a href="contact.html">お問い合わせ</a></nav>
+  <nav class="nav">
+    <a href="index.html">ホーム</a>
+    <a href="portfolio.html">ポートフォリオ</a>
+    <a href="faq.html">FAQ</a>
+    <a href="contact.html">お問い合わせ</a>
+  </nav>
 </div></header>
 <main class="container">
   <section class="card" style="display:flex;align-items:center;justify-content:space-between;gap:20px">
     <div><h2 style="margin:0">山田 花子</h2><p class="small">イラストレーター / 依頼受付中</p></div>
     <div style="display:flex; gap:10px"><a class="btn primary" href="inquiry.html">依頼する</a><span class="pill">学習防止 ON</span></div>
   </section>
+
   <section style="margin-top:18px">
-    <div class="card" style="display:flex;gap:10px;flex-wrap:wrap;align-items:center">
+    <div class="card" id="filterBar" style="display:flex;gap:10px;flex-wrap:wrap;align-items:center">
       <strong>タグ:</strong>
       <button class="btn" data-filter="all" type="button">すべて</button>
-      <button class="btn" data-filter="キャラ" type="button">キャラ</button>
-      <button class="btn" data-filter="動物" type="button">動物</button>
-      <button class="btn" data-filter="背景" type="button">背景</button>
-      <button class="btn" data-filter="小物" type="button">小物</button>
+      <!-- 動的にタグを追加 -->
+      <span class="small">検索</span>
+      <input id="searchBox" placeholder="キーワード" style="padding:8px;border-radius:10px;border:1px solid #e5e7eb">
     </div>
-    <div class="gallery" id="gallery" ondragstart="return false;">
-      <div class="tile" data-id="1" data-tag="キャラ"><img src="assets/work_1.png" alt="w1"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">キャラ</div></div>
-      <div class="tile" data-id="2" data-tag="動物"><img src="assets/work_2.png" alt="w2"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">動物</div></div>
-      <div class="tile" data-id="3" data-tag="背景"><img src="assets/work_3.png" alt="w3"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">背景</div></div>
-      <div class="tile" data-id="4" data-tag="小物"><img src="assets/work_4.png" alt="w4"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">小物</div></div>
-      <div class="tile" data-id="5" data-tag="キャラ"><img src="assets/work_5.png" alt="w5"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">キャラ</div></div>
-      <div class="tile" data-id="6" data-tag="動物"><img src="assets/work_6.png" alt="w6"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">動物</div></div>
-      <div class="tile" data-id="7" data-tag="背景"><img src="assets/work_7.png" alt="w7"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">背景</div></div>
-      <div class="tile" data-id="8" data-tag="小物"><img src="assets/work_8.png" alt="w8"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">小物</div></div>
-      <div class="tile" data-id="9" data-tag="キャラ"><img src="assets/work_9.png" alt="w9"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">キャラ</div></div>
-      <div class="tile" data-id="10" data-tag="動物"><img src="assets/work_10.png" alt="w10"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">動物</div></div>
-      <div class="tile" data-id="11" data-tag="背景"><img src="assets/work_11.png" alt="w11"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">背景</div></div>
-      <div class="tile" data-id="12" data-tag="小物"><img src="assets/work_12.png" alt="w12"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">小物</div></div>
-      <div class="tile" data-id="13" data-tag="キャラ"><img src="assets/work_13.png" alt="w13"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">キャラ</div></div>
-      <div class="tile" data-id="14" data-tag="動物"><img src="assets/work_14.png" alt="w14"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">動物</div></div>
-      <div class="tile" data-id="15" data-tag="背景"><img src="assets/work_15.png" alt="w15"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">背景</div></div>
-      <div class="tile" data-id="16" data-tag="小物"><img src="assets/work_16.png" alt="w16"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">小物</div></div>
-      <div class="tile" data-id="17" data-tag="キャラ"><img src="assets/work_17.png" alt="w17"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">キャラ</div></div>
-      <div class="tile" data-id="18" data-tag="動物"><img src="assets/work_18.png" alt="w18"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">動物</div></div>
-      <div class="tile" data-id="19" data-tag="背景"><img src="assets/work_19.png" alt="w19"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">背景</div></div>
-      <div class="tile" data-id="20" data-tag="小物"><img src="assets/work_20.png" alt="w20"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">小物</div></div>
-      <div class="tile" data-id="21" data-tag="キャラ"><img src="assets/work_21.png" alt="w21"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">キャラ</div></div>
-      <div class="tile" data-id="22" data-tag="動物"><img src="assets/work_22.png" alt="w22"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">動物</div></div>
-      <div class="tile" data-id="23" data-tag="背景"><img src="assets/work_23.png" alt="w23"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">背景</div></div>
-      <div class="tile" data-id="24" data-tag="小物"><img src="assets/work_24.png" alt="w24"><div class="shield">学習防止</div><div class="small" style="padding:6px 2px">小物</div></div>
-    </div>
+    <div class="gallery" id="gallery" ondragstart="return false;"></div>
   </section>
 </main>
-<div id="modal" class="modal"><div class="content">
-  <div class="top"><strong>作品詳細</strong><span class="close">×</span></div>
-  <div class="body"><p class="small">ダウンロードは制限されています。</p></div>
-</div></div>
+
+<div id="modal" class="modal">
+  <div class="content">
+    <div class="top"><strong id="modalTitle">作品詳細</strong><span class="close">×</span></div>
+    <div class="body">
+      <canvas id="wmCanvas" style="width:100%;border-radius:8px;border:1px solid #eee;max-height:70vh"></canvas>
+      <div data-controls="wm" style="display:flex;gap:10px;flex-wrap:wrap;margin:8px 0">
+        <button class="btn" id="wmToggle" type="button">透かしON</button>
+        <a class="btn" id="detailBtn" href="#">詳細ページへ</a>
+        <a class="btn" id="shareBtn" href="#">限定公開リンクを生成</a>
+        <a class="btn" id="inquiryBtn" href="#">依頼する</a>
+        <a class="btn" id="reportBtn" href="#">不正利用を報告</a>
+        <select id="expirySel" style="padding:8px;border-radius:10px;border:1px solid #e5e7eb">
+          <option value="1">有効期限: 1h</option>
+          <option value="24" selected>有効期限: 24h</option>
+          <option value="168">有効期限: 7d</option>
+        </select>
+        <select id="wmPos" style="padding:8px;border-radius:10px;border:1px solid #e5e7eb">
+          <option value="br" selected>位置: 右下</option><option value="bl">左下</option><option value="tr">右上</option><option value="tl">左上</option>
+        </select>
+        <span class="small">濃さ</span><input type="range" id="wmAlpha" min="0.05" max="0.6" step="0.05" value="0.25" style="width:160px">
+        <span class="small">サイズ</span><input type="range" id="wmScale" min="0.02" max="0.08" step="0.005" value="0.035" style="width:160px">
+      </div>
+      <p class="small">ダウンロードは制限されています。</p>
+    </div>
+  </div>
+</div>
+
 <footer class="footer"><div class="container">© 2025 Safolio.</div></footer>
 <script src="script.js"></script>
-<script>
-function applyFilter(tag){ document.querySelectorAll('#gallery .tile').forEach(function(el){ el.style.display=(tag==='all'||el.getAttribute('data-tag')===tag)?'':'none'; }); }
-document.querySelectorAll('button[data-filter]').forEach(function(btn){ btn.addEventListener('click', function(){ applyFilter(btn.getAttribute('data-filter')); }); });
-document.querySelector('.modal .close').addEventListener('click', function(){ document.getElementById('modal').style.display='none'; });
-document.getElementById('modal').addEventListener('click', function(e){ if(e.target.id==='modal') e.currentTarget.style.display='none'; });
-</script></body></html>
+<script src="works.js"></script>
+</body></html>
