--- a/work.html
+++ b/work.html
@@ -1,46 +1,40 @@
 
-<!doctype html><html lang="ja"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Safolio — 作品ページ</title><meta name="robots" content="index,follow,noai,noimageai"><link rel="stylesheet" href="styles.css"></head>
-<body oncontextmenu="return false;"><header class="header"><div class="container inner">
+<!doctype html><html lang="ja"><head>
+<meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Safolio — 作品ページ（JSON）</title>
+<meta name="robots" content="index,follow,noai,noimageai">
+<link rel="stylesheet" href="styles.css">
+</head><body oncontextmenu="return false;">
+<header class="header"><div class="container inner">
   <div class="brand"><div class="logo"></div><strong>Safolio</strong><span class="small">Work</span></div>
-  <nav class="nav"><a href="index.html">ホーム</a><a href="portfolio.html">ポートフォリオ</a><a href="faq.html">FAQ</a><a href="contact.html">お問い合わせ</a></nav>
+  <nav class="nav">
+    <a href="index.html">ホーム</a>
+    <a href="portfolio.html">ポートフォリオ</a>
+    <a href="faq.html">FAQ</a>
+    <a href="contact.html">お問い合わせ</a>
+  </nav>
 </div></header>
-<main class="container"><section class="card" style="max-width:980px;margin:0 auto">
-  <h3 style="margin-top:0">作品</h3>
-  <canvas id="wmCanvas" style="width:100%;border-radius:8px;border:1px solid #eee;max-height:70vh"></canvas>
-  <div style="display:flex;gap:10px;flex-wrap:wrap;margin-top:12px">
-    <button class="btn" id="wmToggle" type="button">透かしON</button>
-    <a class="btn" id="shareBtn" href="#">限定公開リンクを生成</a>
-    <a class="btn primary" href="inquiry.html">依頼する</a>
-    <a class="btn" id="reportBtnWork" href="#">不正利用を報告</a>
-    <a class="btn" href="portfolio.html">一覧へ戻る</a>
-    <select id="expirySel"><option value="1">1h</option><option value="24" selected>24h</option><option value="168">7d</option></select>
-    <select id="wmPos"><option value="br" selected>右下</option><option value="bl">左下</option><option value="tr">右上</option><option value="tl">左上</option></select>
-    <span class="small">濃さ</span><input type="range" id="wmAlpha" min="0.05" max="0.6" step="0.05" value="0.25" style="width:160px">
-    <span class="small">サイズ</span><input type="range" id="wmScale" min="0.02" max="0.08" step="0.005" value="0.035" style="width:160px">
-  </div>
-  <p class="small" id="status"></p>
-</section></main>
+<main class="container">
+  <section class="card" style="max-width:980px;margin:0 auto">
+    <h3 style="margin-top:0" id="workTitle">作品</h3>
+    <canvas id="wmCanvas" style="width:100%;border-radius:8px;border:1px solid #eee;max-height:70vh"></canvas>
+    <div style="display:flex;gap:10px;flex-wrap:wrap;margin-top:12px">
+      <button class="btn" id="wmToggle" type="button">透かしON</button>
+      <a class="btn" id="shareBtn" href="#">限定公開リンクを生成</a>
+      <a class="btn primary" id="inquiryBtn" href="#">依頼する</a>
+      <a class="btn" id="reportBtnWork" href="#">不正利用を報告</a>
+      <a class="btn" href="portfolio.html">一覧へ戻る</a>
+      <select id="expirySel">
+        <option value="1">1h</option><option value="24" selected>24h</option><option value="168">7d</option>
+      </select>
+      <select id="wmPos"><option value="br" selected>右下</option><option value="bl">左下</option><option value="tr">右上</option><option value="tl">左上</option></select>
+      <span class="small">濃さ</span><input type="range" id="wmAlpha" min="0.05" max="0.6" step="0.05" value="0.25" style="width:160px">
+      <span class="small">サイズ</span><input type="range" id="wmScale" min="0.02" max="0.08" step="0.005" value="0.035" style="width:160px">
+    </div>
+    <p class="small" id="status"></p>
+  </section>
+</main>
 <footer class="footer"><div class="container">© 2025 Safolio.</div></footer>
 <script src="script.js"></script>
-<script>
-var params=new URLSearchParams(location.search); var workId=parseInt(params.get('id')||'1',10);
-var wmOn=false; var imgURL='assets/work_'+workId+'.png'; loadCanvasWithWatermark(imgURL, undefined, wmOn);
-document.getElementById('wmToggle').addEventListener('click', function(){ wmOn=!wmOn; this.textContent=wmOn?'透かしOFF':'透かしON'; loadCanvasWithWatermark(imgURL, undefined, wmOn); });
-document.getElementById('shareBtn').addEventListener('click', function(e){
-  e.preventDefault(); var hours=parseInt(document.getElementById('expirySel').value,10)||24;
-  var exp=Date.now()+hours*60*60*1000; var payload={exp:exp,v:2,workId:workId}; var b64=btoa(JSON.stringify(payload));
-  var base=location.origin+location.pathname.replace(/\/work\.html$/, '/'); var url=base+'protected.html?t='+encodeURIComponent(b64);
-  navigator.clipboard&&navigator.clipboard.writeText(url); document.getElementById('status').textContent='限定公開リンクをコピーしました（'+hours+'h）: '+url;
-  try{ SA.track('share_generate',{id:workId,hours:hours}); }catch(e){}
-});
-document.getElementById('reportBtnWork').addEventListener('click', function(e){
-  e.preventDefault(); var mail='mailto:ckonsaru@gmail.com'+encodeURIComponent('[Safolio 不正利用報告] 作品ID:'+workId)+'&body='+encodeURIComponent('作品ID:'+workId+'\nURL:'+location.href);
-  try{ SA.track('report_open',{id:workId}); }catch(e){}
-  location.href=mail;
-});
-document.getElementById('wmPos').addEventListener('change', function(e){ WM.pos=this.value; loadCanvasWithWatermark(imgURL, undefined, wmOn); });
-document.getElementById('wmAlpha').addEventListener('input', function(e){ WM.alpha=parseFloat(this.value); loadCanvasWithWatermark(imgURL, undefined, wmOn); });
-document.getElementById('wmScale').addEventListener('input', function(e){ WM.scale=parseFloat(this.value); loadCanvasWithWatermark(imgURL, undefined, wmOn); });
-try{ SA.track('work_view',{id:workId}); }catch(e){}
-</script></body></html>
+<script src="works.js"></script>
+</body></html>
